2011-02-16  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [GTK] events missing when a document is (re)loaded
        https://bugs.webkit.org/show_bug.cgi?id=25831

        Added new layout test to check the right signals are emitted.

        * platform/gtk/accessibility/document-reload-events-expected.txt: Added.
        * platform/gtk/accessibility/document-reload-events.html: Added.
2011-02-16  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] events missing when a document is (re)loaded
        https://bugs.webkit.org/show_bug.cgi?id=25831

        Make sure webArea returns a proper name and that a signal
        'state-change::defunct' is emitted when detaching the wrapper.

        Test: platform/gtk/accessibility/document-reload-events.html

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_get_name): Returns the current document's title
        as fallback mechanism for webArea objects.
        (webkit_accessible_detach): Emit 'state-change::defunct' function
        as soon as the wrapper is detached from the related core object.
2011-02-16  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] events missing when a document is (re)loaded
        https://bugs.webkit.org/show_bug.cgi?id=25831

        Emit the right signals when reloading a document.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::notifyAccessibilityStatus): New function, to make sure
        the signals involved in reloading a document are properly emitted.
        (WebKit::notifyStatus): Also notify accessibility if enabled.

git-svn-id: svn://svn.chromium.org/blink/trunk@78715 bbb929c8-8fbe-4397-9dbb-9b2b20218538